Согласование содержимого в обработчиках ошибок: 404 больше не становится 500
В логах проды появился WARN ExceptionHandlerExceptionResolver:
«Failure in @ExceptionHandler GlobalExceptionHandler#handleResponseStatusException»
с HttpMediaTypeNotAcceptableException.

Причина: handleResponseStatusException, handleValidationExceptions и
handleMissingCookie были помечены @ResponseBody и всегда возвращали JSON.
Браузер, открывающий страницу, шлёт Accept: text/html,...,wildcard;q=0.8,
и JSON туда не подходит. Конвертер бросал HttpMediaTypeNotAcceptableException
прямо во время записи тела ответа, а сбой внутри @ExceptionHandler Spring не
переваривает: он логирует WARN и отдаёт 500 вместо правильного кода.

ResponseStatusException бросают 25+ мест, и почти все — со страниц, которые
открывает человек: несуществующая категория (CategoryService), товар
(CatalogController), админские атрибуты, товары и импорт. То есть любая
несуществующая категория или товар отдавали 500 вместо 404.

Теперь содержимое согласуется с запросом:

- XHR, путь /api/** и Accept: application/json — JSON как раньше;
- явный text/html в Accept — страница по коду статуса (403/404/500/error),
  тот же набор, что в CustomErrorController;
- Accept без указания типа или «только wildcard» — JSON, потому что так
  ходят все fetch() проекта (cart.js, category.html, cart/index.html),
  иначе бейдж корзины получал бы HTML вместо разобранного ответа;
- клиент, который не принимает ни HTML, ни JSON (Accept: application/xml), —
  получает только статус без тела: рендер страницы всё равно упал бы с 406;
- добавлен отдельный обработчик HttpMediaTypeNotAcceptableException на 406,
  который раньше доходил до общего Exception и отдавался как 500 со стектрейсом;
- в эти обработчики добавлен WARN с методом и путём: раньше в логе не было URL,
  поэтому было непонятно, кто вызывал.

Тесты: ErrorContentNegotiationTest — браузер получает 404 со страницей
error/404 и errorCode в модели, JSON-клиент и XHR получают тело со status и
p